--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: #242424; 
+  background-color:  #d4d4d8;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,24 +15,30 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  text-decoration: underline;
 }
 
-body {
+.content {
+  width: 100vw;
+  height: 100vh;
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  width: 100%;
+}
+
+#header-link:hover {
+  text-decoration: none;
+}
+
+.tenor-sans {
+  font-family: 'Tenor Sans', sans-serif;
 }
 
 button {
@@ -42,12 +48,12 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #d4d4d8;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #242424;
 }
 button:focus,
 button:focus-visible {
