--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: #242424; 
-  background-color:  #d4d4d8;
+  background-color:  #f4f4f5;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -42,20 +42,19 @@ h1 {
 }
 
 button {
-  /* border-radius: 8px; */
-  border: 1px solid transparent;
+  border: 2px solid transparent;
   padding: 0.3em 0.6em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #d4d4d8;
+  background-color: #3f3f46;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #242424;
+  border-color: #a1a1aa;
 }
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  outline: 4px auto #fafafa;
 }
