--- a/src/index.css
+++ b/src/index.css
@@ -55,14 +55,20 @@ button:focus,
 button:focus-visible {
   outline: 4px auto #fafafa;
 }
-/* 
+
+#nf-wrap {
+  min-height: 100%;
+}
+
 #non-footer {
-  padding-bottom: 2.5rem;
+  overflow: auto;
+  padding-bottom: 110px;
 }
 
 #footer {
-  position: absolute;
-  bottom: 0px;
-  width: 100%;
-  height: 2.5rem;
-} */
+  position: relative;
+  margin-top: -110px;
+  /* negative value of footer height */
+  height: 110px;
+  clear: both;
+}
