--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,77 @@
+:root {
+  font-family: Nunito Sans, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
 
+  color-scheme: light dark;
+  color: #242424; 
+  background-color:  #f4f4f5;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+a {
+  font-weight: 900;
+  text-decoration: inherit;
+}
+a:hover {
+  text-decoration: underline;
+}
+
+.content {
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  position: relative;
+}
+
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+  width: 100%;
+}
+
+#header-link:hover {
+  text-decoration: none;
+}
+
+button {
+  border: 2px solid transparent;
+  padding: 0.3em 0.6em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #3f3f46;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+button:hover {
+  border-color: #a1a1aa;
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto #fafafa;
+}
+
+#nf-wrap {
+  min-height: 100%;
+}
+
+#non-footer {
+  overflow: auto;
+  padding-bottom: 110px;
+}
+
+#footer {
+  position: relative;
+  margin-top: -110px;
+  /* negative value of footer height */
+  height: 110px;
+  clear: both;
+}
 
 .langHeader {
   font-size: 2.2em;
