--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ a:hover {
   position: relative;
 }
 
-h1 {
+.h1 {
   font-size: 3.2em;
   line-height: 1.1;
   width: 100%;
@@ -38,7 +38,7 @@ h1 {
   text-decoration: none;
 }
 
-button {
+.btn {
   border: 2px solid transparent;
   padding: 0.3em 0.6em;
   font-size: 1em;
