--- a/src/index.css
+++ b/src/index.css
@@ -62,13 +62,82 @@ button:focus-visible {
 
 #non-footer {
   overflow: auto;
-  padding-bottom: 120px;
 }
 
 #footer {
   position: relative;
-  margin-top: -120px;
-  /* negative value of footer height */
-  height: 120px;
   clear: both;
+}
+
+/* Media queries for footer height */
+
+/* Extra-small devices */
+@media only screen and (max-width: 640px) {
+  #non-footer {
+    padding-bottom: 340px;
+  }
+  
+  #footer {
+    margin-top: -340px;
+    height: 340px;
+  }
+}
+
+/* Small devices */
+@media only screen and (min-width: 640px) {
+  #non-footer {
+    padding-bottom: 275px;
+  }
+  
+  #footer {
+    margin-top: -275px;
+    height: 275px;
+  }
+}
+
+/* Medium devices */
+@media only screen and (min-width: 712px) {
+  #non-footer {
+    padding-bottom: 250px;
+  }
+  
+  #footer {
+    margin-top: -250px;
+    height: 250px;
+  }
+}
+
+/* Medium-large devices */
+@media only screen and (min-width: 768px) {
+  #non-footer {
+    padding-bottom: 160px;
+  }
+  
+  #footer {
+    margin-top: -160px;
+    height: 160px;
+  }
+}
+
+/* Large devices */
+@media only screen and (min-width: 1067px) {
+  #non-footer {
+    padding-bottom: 150px;
+  }
+  
+  #footer {
+    margin-top: -150px;
+    height: 150px;
+  }
+}
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1112px) {
+  #non-footer {
+    padding-bottom: 110px;
+  }
+  
+  #footer {
+    margin-top: -110px;
+    height: 110px;
+  }
 }
